# tulpje

./: .envrc  CHANGELOG.md  Cargo.toml  Justfile  README.md  cliff.toml  flake.nix
.github/workflows/: build.yaml  ci.yaml  docker.yaml  oci.yaml
.sqlx/: query-1a7f6d3db9aeec4455fc25efed2d6f200ec3dc6439fec94a3488dc8c72a6def8.json  query-4fdb5ac27e7f4206b9a7175fda405f4054505daeb911498fe5c88b5a0af41881.json  query-5d7cd2d44b3e607abf1419343dcb56eae8aa90ca3fb00c0db1f291c5834f10d0.json  query-71b5cd20d8c2755bfdb4767f7408e488b3e40c125a5dacdf55e3ac3a9d06bbf8.json  query-79f08df26888f09b90ef089d673a18814f63dab1ed7713e64e87afb32419a073.json  query-8af5884b7921d23a71939f5221055291a1bcfeb0e9c4bd0629ccc4a6ef816ea3.json  query-b7b5010ab3ea37b0bca06059245ebbe3e1ec8d55dc9c3b46d649b10b1acc935c.json  query-b7dc073f345c841a7535b9c9dd442a78c68efddc6e47fe0e848c682aab756bbc.json  query-c3af0e9d0278c6c2e602a4ba985e88f3f78eef985945b07da883d078ab7023f5.json  query-f2aa90c7aa540fccc2c8f1e271fa9c94dac7298689c85339eaf4e052c2b0de16.json  query-f30015f4221ac185157b2e22e3843b4ea88e519a0b60fd2b512b08b1d0b1296e.json  query-f891f7863b78a781cba7ce2c666341aaa69384dfbd48e82a13093d8dca5885e7.json
contrib/: run-local.py
crates/reconnecting-amqp/: CHANGELOG.md  Cargo.toml
crates/tulpje-cache/: CHANGELOG.md  Cargo.toml
crates/tulpje-cache/src/models/: guild.rs
crates/tulpje-common/: Cargo.toml
crates/tulpje-framework/: CHANGELOG.md  Cargo.toml
crates/tulpje-framework/src/: color.rs  constants.rs  framework.rs  lib.rs
crates/tulpje-framework/src/context/: command_context.rs  component_interaction_context.rs  event_context.rs  mod.rs  modal_context.rs  task_context.rs
crates/tulpje-framework/src/handler/: command_handler.rs  component_interaction_handler.rs  event_handler.rs  mod.rs  modal_handler.rs  task_handler.rs
crates/tulpje-framework/src/module/: builder.rs  mod.rs  registry.rs
crates/tulpje-gateway/: Cargo.toml
crates/tulpje-gateway/src/: main.rs  metrics.rs  parsed_event.rs  shard_manager.rs  shard_reporter.rs
crates/tulpje-handler/: Cargo.toml
crates/tulpje-handler/src/: main.rs
crates/tulpje-lib/: Cargo.toml
crates/tulpje-lib/src/: confirmation_dialog.rs  context.rs  db.rs  db_id.rs  lib.rs  message_style.rs  responses.rs  util.rs  wizard.rs
crates/tulpje-mod-core/: Cargo.toml
crates/tulpje-mod-core/src/: db.rs  tasks.rs
crates/tulpje-mod-emoji/: Cargo.toml
crates/tulpje-mod-emoji/src/: clone.rs
crates/tulpje-mod-pluralkit/: Cargo.toml
crates/tulpje-mod-pluralkit/src/: commands.rs  db.rs  lib.rs  util.rs  wizard.rs
crates/tulpje-mod-pluralkit/src/fronters/: db.rs  setup.rs  shared.rs  tasks.rs  update.rs
crates/tulpje-mod-pluralkit/src/notify/: db.rs  setup.rs  shared.rs
crates/tulpje-mod-pluralkit/src/roles/: constants.rs  db.rs  mod.rs  prompts.rs  role_limit.rs  settings.rs  shared.rs  update.rs  update_stats.rs
crates/tulpje-mod-pluralkit/src/roles/commands/setup/: mod.rs  state.rs
crates/tulpje-mod-pluralkit/src/roles/setup/: components.rs  custom_ids.rs  mod.rs  wizard.rs
crates/tulpje-mod-pluralkit/src/roles/setup/view/: already_setup.rs  legacy_roles.rs  mod.rs  names_over_limit.rs  near_role_limit.rs  role_suffix.rs
crates/tulpje-mod-pluralkit/src/roles/shared/: mod.rs  settings.rs
crates/tulpje-mod-stats/: Cargo.toml
crates/tulpje-mod-stats/src/: commands.rs
crates/workspace-hack/: Cargo.toml
migrations/: 20260401101610_create_pk_guild_roles.sql
nix/pkgs/: tulpje-utils.nix
tools/release-tulpje/: pyproject.toml
tools/release-tulpje/src/release_tulpje/: __init__.py  cargo_semver.py  commit_info.py  constants.py  crates.py  git.py  releases.py  util.py  version.py
tools/release-tulpje/tests/: test_bump_version.py  test_version_bump.py
