[package]
name = "reconnecting-amqp"
version = "0.2.3-rc.1"
description = "Auto-reconnecting amqprs wrapper"
publish = true

edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
amqprs = { version = "2.1.3", features = ["compliance_assert", "traces", "urispec"] }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
