[package]
name = "tulpje-handler"
build = "../../contrib/build.rs"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tulpje-common = { version = "0.25.1", path = "../tulpje-common" }
tulpje-lib = { version = "0.25.1", path = "../tulpje-lib" }
tulpje-framework = { version = "0.17.3", path = "../tulpje-framework" }
tulpje-cache = { version = "0.5.2", path = "../tulpje-cache" }
tulpje-mod-core = { version = "0.25.1", path = "../tulpje-mod-core" }
tulpje-mod-emoji = { version = "0.25.1", path = "../tulpje-mod-emoji" }
tulpje-mod-pluralkit = { version = "0.25.1", path = "../tulpje-mod-pluralkit" }
tulpje-mod-stats = { version = "0.25.1", path = "../tulpje-mod-stats" }
reconnecting-amqp = { version = "0.2.3", path = "../reconnecting-amqp" }
rustls = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal"] }
tracing = { workspace = true }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true, features = ["decompression", "rustls-webpki-roots"] }
serde = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }
pkrs-fork = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
redis = { workspace = true }
figment = { version = "0.10.19", features = ["env"] }
figment_file_provider_adapter = "0.1.1"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
