[package]
name = "tulpje-lib"
description = "Functionality shared between Tulpje modules"
publish = false

version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
pkrs-fork = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tulpje-cache = { version = "0.5.1", path = "../tulpje-cache" }
tulpje-framework = { version = "0.17.0", path = "../tulpje-framework" }
twilight-http = { workspace = true, features = ["decompression", "rustls-webpki-roots"] }
twilight-model = { workspace = true }
twilight-util = { workspace = true, features = ["builder", "permission-calculator"] }

[lints]
workspace = true
