[package]
name = "tulpje-mod-core"
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tulpje-framework = { version = "0.17.1-rc.1", path = "../tulpje-framework" }
tulpje-lib = { version = "0.23.4-rc.1", path = "../tulpje-lib" }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true, features = ["decompression", "rustls-webpki-roots"] }
twilight-model = { workspace = true }
twilight-util = { workspace = true, features = ["builder"] }

[lints]
workspace = true
