[package]
name = "tulpje-mod-emoji"
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = { workspace = true }
futures-util = "0.3.31"
regex = "1.12.2"
reqwest = { workspace = true, features = ["query", "rustls", "charset", "http2"] }
sqlx = { workspace = true }
tracing = { workspace = true }
tulpje-cache = { version = "0.5.2", path = "../tulpje-cache" }
tulpje-framework = { version = "0.17.3", path = "../tulpje-framework" }
tulpje-lib = { version = "0.25.1", path = "../tulpje-lib" }
tulpje-common = { version = "0.25.1", path = "../tulpje-common" }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true, features = ["decompression", "rustls-webpki-roots"] }
twilight-model = { workspace = true }
twilight-util = { workspace = true, features = ["builder"] }

[lints]
workspace = true
